--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -9,10 +9,13 @@
     <title>Blog</title>
   </head>
   <body>
+    <%= render @view_module, @view_template, assigns %>
     <%= if Mix.env == :dev do %>
-      <script src='http://localhost:4001/bundle.js'></script>
+      <script src='http://localhost:4001/vendor.js'></script>
+      <script src='http://localhost:4001/app.js'></script>
     <% else %>
-      <script src="<%= static_path(@conn, "/js/bundle.js") %>"></script>
+      <script src="<%= static_path(@conn, "/vendor.js") %>"></script>
+      <script src="<%= static_path(@conn, "/app.js") %>"></script>
     <% end %>
   </body>
 </html>
